--- a/1-HTML5/index.html
+++ b/1-HTML5/index.html
@@ -19,7 +19,7 @@
   <hr>
   <img src="https://www.producereport.com/sites/default/files/styles/large/public/field/image/20210123%20Sun%20Fuji%20main.jpg?itok=Wy3vtUFz" alt="Apple">
   <br>
-  <a href="/about.html">About</a>
+  <a href="about.html">About</a>
   <br>
   <ol>
     <li>Apples</li>
