--- a/2-HTML5 Advanced/index.html
+++ b/2-HTML5 Advanced/index.html
@@ -17,8 +17,8 @@
   <hr>
   <img src="https://www.producereport.com/sites/default/files/styles/large/public/field/image/20210123%20Sun%20Fuji%20main.jpg?itok=Wy3vtUFz" alt="Apple">
   <br>
-  <a href="/about.html">About</a><br>
-  <a href="/register.html">Register</a>
+  <a href="about.html">About</a><br>
+  <a href="register.html">Register</a>
   <br>
   <ol>
     <li>Apples</li>
