--- a/02-html5-advanced/register.html
+++ b/02-html5-advanced/register.html
@@ -12,7 +12,7 @@
   <div>
     <h1>Registration Form</h1>
     <!-- POST more secure than GET, using GET so query string output can be seen and checked easily -->
-    <form action="" method="get">
+    <form action="" method="post">
 
       <label for="first">First Name:</label>
       <input type="text" id="first" name="first">
